fixed spacing problems

--- a/src/components/UploadInfo/UploadInfo.scss
+++ b/src/components/UploadInfo/UploadInfo.scss
@@ -39,7 +39,7 @@
         }
 
         &--video-description {
-            height: 7rem;
+            height: 7.1rem;
             margin-bottom: 0rem;
         }
     }
